route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: rvreport-nginx
  namespace: sysinfra-workloads
  uid: f624ef55-2339-42ac-a75c-5f1dc1c86216
  resourceVersion: '14231231'
  generation: 1
  creationTimestamp: '2026-09-17T10:01:44Z'
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"route.openshift.io/v1","kind":"Route","metadata":{"annotations":{},"name":"rvreport-nginx","namespace":"sysinfra-workloads"},"spec":{"port":{"targetPort":"http"},"to":{"kind":"Service","name":"rvreport-nginx"}}}
    openshift.io/host.generated: 'true'
  managedFields:
    - manager: kubectl-client-side-apply
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2026-09-17T10:01:44Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:kubectl.kubernetes.io/last-applied-configuration': {}
        'f:spec':
          'f:port':
            .: {}
            'f:targetPort': {}
          'f:to':
            'f:kind': {}
            'f:name': {}
            'f:weight': {}
          'f:wildcardPolicy': {}
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2026-09-17T10:01:44Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:ingress': {}
      subresource: status
spec:
  host: rvreport-nginx-sysinfra-workloads.apps.ailab.mfec.co.th
  to:
    kind: Service
    name: rvreport-nginx
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
status:
  ingress:
    - host: rvreport-nginx-sysinfra-workloads.apps.ailab.mfec.co.th
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2026-09-17T10:01:44Z'
      wildcardPolicy: None
      routerCanonicalHostname: router-default.apps.ailab.mfec.co.th
